<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Tabuleiro</string>
    <string name="max_pontos_vida">Max Pontos Vida</string>
    <string name="pontos_vida">Pontos Vida</string>
    <string name="eventos">Eventos</string>
    <string name="tipo_visao">Tipo de Visão</string>
    <string name="metros_m">m</string>
    <string name="raio_luz">Raio da Luz</string>
    <string name="salvar">Salvar</string>
    <string name="abrir">Abrir</string>
    <string-array name="tipo_visao_array">
      <!-- A ordem deve ser a mesma da enum de visoes. -->
      <item>Visão Normal</item>
      <item>Visão na Penumbra</item>
      <item>Visão no Escuro</item>
    </string-array>
  </resources>
