<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
  <!-- max pontos de vida -->
  <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
      android:orientation="horizontal"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content">
    <TextView android:id="@+id/rotulo_max_pontos_vida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:imeOptions="flagNoExtractUi"
        android:text="@string/max_pontos_vida" />
    <EditText
        android:id="@+id/max_pontos_vida"
        android:maxLength="4"
        android:minEms="4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:imeOptions="flagNoExtractUi"
        android:inputType="phone" />
  </LinearLayout>
  <!-- pontos de vida -->
  <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
      android:orientation="horizontal"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content">
    <TextView android:id="@+id/rotulo_pontos_vida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:imeOptions="flagNoExtractUi"
        android:text="@string/pontos_vida" />
    <EditText
        android:id="@+id/pontos_vida"
        android:maxLength="4"
        android:minEms="4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:imeOptions="flagNoExtractUi"
        android:inputType="number" />
  </LinearLayout>
  <!-- tipo de visao -->
  <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
      android:orientation="horizontal"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content">
    <TextView android:id="@+id/rotulo_tipo_visao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:imeOptions="flagNoExtractUi"
        android:text="@string/tipo_visao" />
    <Spinner
        android:id="@+id/tipo_visao"
        android:layout_width="fill_parent"
        android:imeOptions="flagNoExtractUi"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/raio_visao_escuro"
        android:maxLength="4"
        android:minEms="4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:imeOptions="flagNoExtractUi"
        android:inputType="number" />
    <TextView android:id="@+id/metros"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:imeOptions="flagNoExtractUi"
        android:text="@string/metros_m" />
  </LinearLayout>
  <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
      android:orientation="horizontal"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content">
    <TextView android:id="@+id/raio_luz_rotulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:imeOptions="flagNoExtractUi"
        android:text="@string/raio_luz" />
    <NumberPicker android:id="@+id/raio_luz_picker"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:imeOptions="flagNoExtractUi"
        android:layout_height="wrap_content" />
  </LinearLayout>

  <!-- eventos -->
  <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
      android:orientation="horizontal"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content">
    <TextView android:id="@+id/rotulo_eventos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:imeOptions="flagNoExtractUi"
        android:text="@string/eventos" />
    <EditText
        android:id="@+id/eventos"
        android:minEms="20"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:imeOptions="flagNoExtractUi"
        android:minLines="5"/>
  </LinearLayout>
</LinearLayout>
